changed parameter for better readability